Fixed bug #54971 (Wrong result when using iterator_to_array with use_keys on true)